Fix gap in agenda table

--- a/src/event/2024-CCRS-VCMconference/assets/css/main.css
+++ b/src/event/2024-CCRS-VCMconference/assets/css/main.css
@@ -489,8 +489,11 @@
 
   .tc-agenda-table__title {
     display: block;
-    margin-top: 0.5rem;
     line-height: 1.5;
+  }
+
+  .tc-agenda-table__label {
+    margin-bottom: 0.5rem;
   }
 }
 
